Gauss, LU-Zerlegung, memray hat environment Probleme

--- a/EA1_Ahmed.ipynb
+++ b/EA1_Ahmed.ipynb
@@ -22,10 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "080a3fb8-9b98-4017-b6ba-3895321b8431",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.e+00 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16 1.e-16\n",
+      " 1.e-16]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -51,12 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "11b6c189-e0ee-411a-8f83-b804db3527d8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum_numpy=np.float64(1.0000000000000084)\n",
+      "sum_forward=np.float64(1.0)\n",
+      "sum_reverse=np.float64(1.00000000000001)\n"
+     ]
+    }
+   ],
    "source": [
     "sum_numpy = np.sum(array)\n",
     "print(f\"{sum_numpy=}\")\n",
@@ -544,13 +572,15 @@
     "\n",
     "  <h2>Backsubstitution-Verfahren</h2>\n",
     "\n",
-    "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz.\n",
+    "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz. \n",
+    "\n",
+    "Diese Funktion kann auch mit dem Parameter upper_triangular=False für allgemeine Matrizen verwendet werden. Es ist in den Kommentaren auch jeweils eine Codealternative enthalten welche eine zusätzliche Schleife verwendet, was in diesem Fall schneller wäre.\n",
     "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "95406ab9-708c-4710-a0e4-c32a1bebd8c4",
    "metadata": {
     "nbgrader": {
@@ -567,28 +597,39 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def b_solve(A, b):\n",
+    "def b_solve(A, b, upper_triangular=True):\n",
     "    \"\"\"Solve a system of linear equations A * x = b where A is an upper triangular matrix.\"\"\"\n",
-    "\n",
-    "    n = len(b)  # Anzahl der Variablen im Lösungsvektor b bzw. Länge des Vektors b\n",
-    "    x = np.zeros_like(b, dtype=float)  # Vektor für die Lösung, initialisiert mit Nullen\n",
+    "    #kann auch nicht-triangulare Matrizen loesen \n",
     "    \n",
-    "    # Rückwärtseinsetzung\n",
-    "    # Die arrays fangen mit Index 0 an\n",
-    "    # Iteration von der letzten Zeile bis zur ersten \n",
-    "    # range(start, \"bis zu aber nicht einschließlich\" stop, step)\n",
-    "    for i in range(n - 1, -1, -1):  \n",
-    "        # Berechnung der Summe der Produkte der bekannten x-Werte\n",
-    "        summation = np.dot(A[i, i + 1:], x[i + 1:]) # hier wird die Vektorisierung, die numpy zur Verfügung stellt, benutzt, um die Effizienz zu erhöhen\n",
-    "        x[i] = (b[i] - summation) / A[i, i]  # Berechnung des aktuellen x_i\n",
-    "        #print(f\"x[{i}] = (b[{i}] - summation) / A[i, i] = ({b[i]} - {np.dot(A[i, i + 1:], x[i + 1:])}) / {A[i,i]} = {x[i]}\")\n",
-    "    return x\n",
+    "    #b soll als Spaltenvektor vorliegen\n",
+    "    if len(b.shape) < 2:\n",
+    "        b = b[:, np.newaxis]\n",
+    "    \n",
+    "    #Gauss-Jordan-Algorithmus    \n",
+    "    Ab=np.concatenate((A,b),1)    \n",
+    "    for n in range(min(A.shape)-1,-1,-1):          \n",
+    "        if Ab[n][n]==0:\n",
+    "            continue\n",
+    "        Ab[n]=Ab[n]/Ab[n][n]  \n",
+    "        \n",
+    "        if upper_triangular:\n",
+    "            #Dreiecksmatrix ohne extra Schleife, 11.5 microsec\n",
+    "            Ab[:n] = Ab[:n] - np.outer(Ab[:n,n], Ab[n])\n",
+    "            \n",
+    "            #Dreiecksmatrix, 10 microsec\n",
+    "            #for m in range(n):                    \n",
+    "             #   Ab[m] = Ab[m] - Ab[m][n] / Ab[n][n] * Ab[n]\n",
+    "        else:\n",
+    "            #Allgemeinfall ohne extra Schleife, 20.5 microsec\n",
+    "            zeilen = np.arange(Ab.shape[0]) != n\n",
+    "            Ab[zeilen] = Ab[zeilen] - np.outer(Ab[zeilen, n], Ab[n])\n",
     "\n",
-    "#Beispiel:\n",
-    "A = np.array([[2,3,5,1],[0,4,6,2],[0,0,7,3],[0,0,0,8]])\n",
-    "b = np.array([9,8,7,8])\n",
-    "x = b_solve(A,b)\n",
-    "#print(f\"{np.dot(A,x)} == {b}\") #\"[9. 8. 7. 8.] == [9 8 7 8]\""
+    "            #Allgemeinfall, 14.5 microsec\n",
+    "            #for m in range(Ab.shape[0]):        \n",
+    "             #   if m != n:            \n",
+    "              #      Ab[m] = Ab[m] - Ab[m][n] / Ab[n][n] * Ab[n]        \n",
+    "            \n",
+    "    return Ab[:,-1:].flatten() #x steht nun in der letzten Spalte "
    ]
   },
   {
@@ -650,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7e01d874-1715-40b2-918f-be10435918b5",
    "metadata": {
     "nbgrader": {
@@ -666,12 +707,29 @@
    "outputs": [],
    "source": [
     "def lu_decomposition(A):\n",
-    "    \"\"\"\n",
-    "    Implement LU-Decomposition of a square matrix.\n",
-    "    This function works in-place i.e. it stores information about L and U in A and returns the pivot vector.\n",
-    "    \"\"\"\n",
-    "    ...\n",
-    "    return p"
+    "    \"\"\"L und U Matrix werden innerhalb von A Matrix berechnet und der Pivot-Vektor wird ausgegeben\"\"\"\n",
+    "    \n",
+    "    n = A.shape[0]\n",
+    "    P = np.arange(n)\n",
+    "\n",
+    "    for k in range(n):\n",
+    "        # Pivotisierung: Index der Zeile mit größtem Betrag in Spalte k finden\n",
+    "        pivot_index = np.argmax(np.abs(A[k:n, k])) + k\n",
+    "        if A[pivot_index, k] == 0:\n",
+    "            raise ValueError(\"Matrix ist singulaer.\")\n",
+    "\n",
+    "        # Zeilen tauschen in A\n",
+    "        if pivot_index != k:\n",
+    "            A[[k, pivot_index], :] = A[[pivot_index, k], :]\n",
+    "            P[[k, pivot_index]] = P[[pivot_index, k]]\n",
+    "\n",
+    "        # Berechnung L unterhalb der Diagonale\n",
+    "        A[k+1:n, k] /= A[k, k]\n",
+    "\n",
+    "        # Berechnung U obere Dreiecksmatrix inklusive Diagonale\n",
+    "        A[k+1:n, k+1:n] -= np.outer(A[k+1:n, k], A[k, k+1:n])\n",
+    "\n",
+    "    return P #Pivot-Vektor"
    ]
   },
   {
@@ -693,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ef6c6d07-df37-4011-b913-be1719ffb094",
    "metadata": {
     "nbgrader": {
@@ -710,7 +768,22 @@
    "source": [
     "def custom_solve(A, b):\n",
     "    \"\"\"Solve a system of linear equations A * x = b and return result vector x.\"\"\"\n",
-    "    ...\n",
+    "    \n",
+    "    #Pivot-Vektor und A (welches LU-Zerlegung enthaelt) werden berechnet\n",
+    "    P = lu_decomposition(A)\n",
+    "    \n",
+    "    #L und U werden aus A isoliert\n",
+    "    n = A.shape[0]\n",
+    "    L = np.tril(A, k=-1) + np.eye(n)  # untere Dreiecksmatrix mit Einsen auf der Diagonale\n",
+    "    U = np.triu(A)                   # obere Dreiecksmatrix inklusive Diagonale\n",
+    "    \n",
+    "    #Lc = b[P] wird geloest fuer c\n",
+    "    #hier wird upper_triangular=False verwendet um eine allgemeine Matrix zu loesen\n",
+    "    c = b_solve(L, b[P], upper_triangular=False)\n",
+    "    \n",
+    "    #Ux = c wird geloest fuer x\n",
+    "    x = b_solve(U, c)\n",
+    "    \n",
     "    return x"
    ]
   },
@@ -736,27 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c638640-acfa-48e8-a683-46f0ae9c50a5",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "outputs": [],
-   "source": [
-    "# Beispiel linalg\n",
-    "import scipy.linalg as linalg\n",
-    "\n",
-    "n = 128\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "A = rng.random((n, n))\n",
-    "b = rng.random(n)\n",
-    "c = linalg.solve(A, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "e5fb20a9-a354-4b3d-8890-8870d825d730",
    "metadata": {
     "nbgrader": {
@@ -769,12 +822,37 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test bestanden fuer Dimension 16\n",
+      "Test bestanden fuer Dimension 32\n",
+      "Test bestanden fuer Dimension 64\n"
+     ]
+    }
+   ],
    "source": [
     "import scipy.linalg as linalg\n",
     "\n",
-    "# test different dimensions\n",
-    "..."
+    "def test_custom_solve(n):    \n",
+    "    \"\"\"vergleicht Ergebnisse von custom_solve mit linalg.solve mittels assert-Bedingung\"\"\"\n",
+    "    \n",
+    "    rng = np.random.default_rng(seed=123)\n",
+    "    A = rng.random((n, n))\n",
+    "    b = rng.random(n)\n",
+    "    linalg_x = linalg.solve(A, b)    \n",
+    "    custom_x = custom_solve(A, b)\n",
+    "    \n",
+    "    #sicherstellen, dass Ergebnisse gleich sind, float-Unpraezision ignorieren\n",
+    "    assert np.allclose(linalg_x, custom_x, atol=1e-6), f\"Ergebnisse weichen zu stark ab bei Dimension {n}\"\n",
+    "    \n",
+    "    print(\"Test bestanden fuer Dimension\", n)\n",
+    "    \n",
+    "test_custom_solve(16)\n",
+    "test_custom_solve(32)\n",
+    "test_custom_solve(64)"
    ]
   },
   {
@@ -805,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3b6bc562-608a-4f7e-b2a3-2f63d0447f85",
    "metadata": {
     "nbgrader": {
@@ -818,19 +896,30 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.039761174999967, 1.0474625780000224, 1.4420750689999977, 1.3782401929998969]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from scipy.linalg import lu_factor, lu\n",
     "from timeit import repeat\n",
     "\n",
-    "n = 8192\n",
+    "n = 4096\n",
     "number = 1\n",
     "repetitions = 2\n",
     "# store all four minimal runtimes in this list\n",
-    "minimums = []\n",
     "rng = np.random.default_rng(seed=123)\n",
-    "\n",
-    "..."
+    "repeat_lambda = lambda x: repeat(x, setup=\"A = rng.random((n, n))\", repeat=repetitions, number=number, globals=globals())\n",
+    "minimums = [min(repeat_lambda(x)) for x in [\"lu_factor(A, overwrite_a=False)\", \"lu_factor(A, overwrite_a=True)\", \"lu(A, overwrite_a=False)\", \"lu(A, overwrite_a=True)\"]]\n",
+    "minimums"
    ]
   },
   {
@@ -862,90 +951,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e1f13582-71a9-4c1a-81fc-d400598964a3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "%%file lu_inplace.py\n",
+    "#.py files werden erstellt fuer die jeweiligen Funktionen\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    with open(file_name.replace(\".bin\", \".py\"), \"w\") as file:\n",
+    "        #ich muss den Pfad des Environment im dem mein memray liegt hinzufuegen\n",
+    "           \n",
+    "        \n",
+    "        file.write(\n",
+    "f\"\"\"import numpy as np\n",
+    "from scipy.linalg import lu_factor, lu\n",
     "import memray\n",
-    "import numpy as np\n",
-    "from scipy.linalg import lu\n",
     "\n",
-    "n = 8192\n",
+    "n = 4096\n",
     "rng = np.random.default_rng(seed=123)\n",
-    "..."
+    "A = rng.random((n, n))\n",
+    "\n",
+    "with memray.Tracker(\"{file_name}\", native_traces=True):\n",
+    "    lu{\"_factor\" if \"_factor\" in file_name else \"\"}(A, overwrite_a={\"_inplace\" in file_name})\n",
+    "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15c95a8e-c10e-4af1-bf51-70e2c463046e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%file lu_notinplace.py\n",
-    "import memray\n",
-    "import numpy as np\n",
-    "from scipy.linalg import lu\n",
-    "\n",
-    "n = 8192\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e370c43-116f-4218-b38e-bfc15dc250ae",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%file lu_factor_inplace.py\n",
-    "import memray\n",
-    "import numpy as np\n",
-    "from scipy.linalg import lu_factor\n",
-    "\n",
-    "n = 8192\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba834e49-d262-45d1-9bcc-737a07f2ab49",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%file lu_factor_notinplace.py\n",
-    "import memray\n",
-    "import numpy as np\n",
-    "from scipy.linalg import lu_factor\n",
-    "\n",
-    "n = 8192\n",
-    "rng = np.random.default_rng(seed=123)\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9589f383-a893-4d90-93ae-c2b1f44e5d36",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'memray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmemray\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#alle .py files werden ausgefuehrt, bei mir mit python3\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mlu_inplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_notinplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_factor_inplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_factor_notinplace.bin\u001b[39m\u001b[33m\"\u001b[39m]:\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'memray'"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "import memray, os\n",
+    "\n",
+    "#alle .py files werden ausgefuehrt, bei mir mit python3\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    os.system(f\"python3 {file_name.replace(\".bin\", \".py\")}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "19be799c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'memray' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Speichernutzung wird aus allen .bin files gelesen\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mlu_inplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_notinplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_factor_inplace.bin\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlu_factor_notinplace.bin\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     reader = \u001b[43mmemray\u001b[49m.FileReader(file_name)\n\u001b[32m      4\u001b[39m     mem_use = \u001b[32m0\u001b[39m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m allocation \u001b[38;5;129;01min\u001b[39;00m reader.get_allocation_records():\n",
+      "\u001b[31mNameError\u001b[39m: name 'memray' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Speichernutzung wird aus allen .bin files gelesen\n",
+    "for file_name in [\"lu_inplace.bin\", \"lu_notinplace.bin\", \"lu_factor_inplace.bin\", \"lu_factor_notinplace.bin\"]:\n",
+    "    reader = memray.FileReader(file_name)\n",
+    "    mem_use = 0\n",
+    "\n",
+    "    for allocation in reader.get_allocation_records():\n",
+    "        mem_use += allocation.size\n",
+    "\n",
+    "    print(f\"Speichernutzung von {file_name[:-4]} : {round(mem_use / 2**20)}MB\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e63aac6",
+   "metadata": {},
+   "source": [
+    "Die Funktion lu_factor verwendet konstant nur 144MB an Speicher.\n",
+    "\n",
+    "Funktion lu verwendet deutlich mehr Speicher mit 400MB \"inplace\" und sogar 528MB \"notinplace\"\n"
    ]
   },
   {
