Backsubstitution-Verfahren mit zwei Lösungsvorschlägen ergänzt

--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -625,13 +625,71 @@
     "\n",
     "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz. \n",
     "\n",
-    "Diese Funktion kann auch mit dem Parameter upper_triangular=False für allgemeine Matrizen verwendet werden. Es ist in den Kommentaren auch jeweils eine Codealternative enthalten welche eine zusätzliche Schleife verwendet, was in diesem Fall schneller wäre.\n",
+    "Die Funktion `b_solve1` implementiert eine effiziente Rückwärtseinsetzung zur Lösung eines linearen Gleichungssystems mit oberer Dreiecksmatrix – kompakt, direkt und ohne überflüssigen Overhead.\n",
+    "\n",
     "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "e905df91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lösung x: [1.60714286 0.64285714 0.57142857 1.        ]\n",
+      "Prüfung A @ x: [9. 8. 7. 8.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def b_solve1(A, b):\n",
+    "    \"\"\"Löst ein lineares Gleichungssystem A * x = b, wobei A eine obere Dreiecksmatrix ist.\"\"\"\n",
+    "    n = len(b)\n",
+    "    x = np.zeros_like(b, dtype=float)\n",
+    "\n",
+    "    # Rückwärtseinsetzung\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        summation = np.dot(A[i, i + 1:], x[i + 1:])\n",
+    "        x[i] = (b[i] - summation) / A[i, i]\n",
+    "        #print(f\"x[{i}] = (b[{i}] - sum) / A[{i},{i}] = ({b[i]} - {summation}) / {A[i,i]} = {x[i]}\")\n",
+    "    return x\n",
+    "\n",
+    "# Beispiel\n",
+    "A = np.array([[2, 3, 5, 1],\n",
+    "              [0, 4, 6, 2],\n",
+    "              [0, 0, 7, 3],\n",
+    "              [0, 0, 0, 8]], dtype=float)\n",
+    "\n",
+    "b = np.array([9, 8, 7, 8], dtype=float)\n",
+    "\n",
+    "x = b_solve1(A, b)\n",
+    "\n",
+    "# Testausgabe\n",
+    "print(\"Lösung x:\", x)\n",
+    "print(\"Prüfung A @ x:\", np.dot(A, x))  # Sollte gleich b sein"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a27592",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:blue\">\n",
+    "\n",
+    "Die Funktion `b_solve2` basiert auf dem Gauss-Jordan-Verfahren und löst lineare Gleichungssysteme allgemein oder im Spezialfall mit oberer Dreiecksmatrix mithilfe vektorisierter NumPy-Operationen.\n",
+    "\n",
+    "</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "95406ab9-708c-4710-a0e4-c32a1bebd8c4",
    "metadata": {
     "nbgrader": {
@@ -644,11 +702,20 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lösung x: [1.60714286 0.64285714 0.57142857 1.        ]\n",
+      "Prüfung A @ x: [9. 8. 7. 8.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def b_solve(A, b, upper_triangular=True):\n",
+    "def b_solve2(A, b, upper_triangular=True):\n",
     "    \"\"\"Solve a system of linear equations A * x = b where A is an upper triangular matrix.\"\"\"\n",
     "    #kann auch nicht-triangulare Matrizen loesen \n",
     "    \n",
@@ -680,7 +747,21 @@
     "             #   if m != n:            \n",
     "              #      Ab[m] = Ab[m] - Ab[m][n] / Ab[n][n] * Ab[n]        \n",
     "            \n",
-    "    return Ab[:,-1:].flatten() #x steht nun in der letzten Spalte "
+    "    return Ab[:,-1:].flatten() #x steht nun in der letzten Spalte\n",
+    "\n",
+    "# Beispiel\n",
+    "A = np.array([[2, 3, 5, 1],\n",
+    "              [0, 4, 6, 2],\n",
+    "              [0, 0, 7, 3],\n",
+    "              [0, 0, 0, 8]], dtype=float)\n",
+    "\n",
+    "b = np.array([9, 8, 7, 8], dtype=float)\n",
+    "\n",
+    "x = b_solve2(A, b)\n",
+    "\n",
+    "# Testausgabe\n",
+    "print(\"Lösung x:\", x)\n",
+    "print(\"Prüfung A @ x:\", np.dot(A, x))  # Sollte gleich b sein"
    ]
   },
   {
