--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -122,152 +122,194 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
-    "<h2>Numerische Genauigkeit von verschiedenen Additionsverfahren</h2>\n",
+    "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
     "\n",
-    "Je nach Methode ergibt sich ein anderes Additionsergebnis:\n",
+    "### Unterschiede in der Summierung\n",
     "\n",
-    "```\n",
+    "Bei der Berechnung der Summe mit unterschiedlichen Verfahren ergeben sich leicht unterschiedliche Ergebnisse:\n",
+    "\n",
+    "```python\n",
     "sum_numpy   = np.float64(1.0000000000000084)\n",
     "sum_forward = np.float64(1.0)\n",
     "sum_reverse = np.float64(1.00000000000001)\n",
     "```\n",
     "\n",
+    "Diese Unterschiede entstehen durch **Rundungsfehler** in der **Gleitkommadarstellung**, die auf der begrenzten Anzahl an Bits basiert, mit der reale Zahlen intern im Computer dargestellt werden.\n",
+    "\n",
     "---\n",
     "\n",
-    "Das liegt im Wesentlichen an der begrenzten bzw. endlichen Gleitkomma-Darstellung mithilfe des Computers, die zu diesen numerischen Ungenauigkeiten führt.\n",
+    "## Gleitkommazahlen im IEEE 754 Standard\n",
     "\n",
-    "**[`np.float64`](https://numpy.org/doc/2.1/reference/arrays.scalars.html#numpy.float64)** ist eine 64-bit-Gleitkommazahl. Die Zahl wird intern gemäß dem IEEE-754-Standard wie folgt dargestellt:\n",
+    "Python und NumPy verwenden standardmäßig `float64` (IEEE 754 Double Precision), das wie folgt aufgebaut ist:\n",
     "\n",
-    "- **1 Bit** für das Vorzeichen ($0$ = positiv, $1$ = negativ)\n",
-    "- **11 Bits** für den Exponenten\n",
-    "- **52 Bits** für die Mantisse\n",
+    "- **1 Bit** für das Vorzeichen  \n",
+    "- **11 Bits** für den Exponenten  \n",
+    "- **52 Bits** für die Mantisse  \n",
     "\n",
-    "Das ergibt insgesamt: $1 + 11 + 52 = 64$ Bits.\n",
+    "Insgesamt also **64 Bit**. Die reale Zahl wird durch folgende Formel dargestellt:\n",
     "\n",
-    "Die kleinste Zahl, die man zu `1.0` addieren kann, sodass das Ergebnis sich von `1.0` unterscheidet, nennt man die **Maschinengenauigkeit** oder **machine epsilon**. Das ist der kleinste Unterschied, den ein `np.float64` von `1.0` noch unterscheiden kann – und genau hier zeigen sich die Grenzen der numerischen Genauigkeit bei Gleitkommazahlen.\n",
+    "```\n",
+    "Zahl = (-1)^s · 1.m · 2^(e - 1023)\n",
+    "```\n",
+    "\n",
+    "Dabei ist:\n",
+    "\n",
+    "- `s` das Vorzeichenbit  \n",
+    "- `m` die Mantisse (ohne führende 1)  \n",
+    "- `e` der gespeicherte Exponent mit **Bias** = 1023  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Maschinengenauigkeit\n",
+    "\n",
+    "Die kleinste Zahl, die zu `1.0` addiert werden kann, sodass sich das Ergebnis **numerisch unterscheidet**, nennt man **Maschinengenauigkeit** oder **machine epsilon**:\n",
     "\n",
     "```python\n",
-    "np.finfo(float).eps  \n",
-    "# np.float64(2.220446049250313e-16)\n",
+    "np.finfo(float).eps\n",
+    "# Ergebnis: 2.220446049250313e-16\n",
+    "```\n",
+    "\n",
+    "Zahlen kleiner als `eps` „verpuffen“ bei der Addition zu größeren Zahlen wie `1.0`, da sie außerhalb der darstellbaren Genauigkeit der Mantisse liegen:\n",
+    "\n",
+    "```python\n",
+    "print(1e-16 < np.finfo(float).eps)  # True\n",
+    "print(1.0 + 1e-16 == 1.0)           # True\n",
     "```\n",
     "\n",
     "---\n",
     "\n",
-    "Die $100$ gleich großen Werte ($=10^{-16}$) liegen alle unterhalb von $\\text{eps}$.  Zum Beispiel gilt: $1.0 + 10^{-16} = 1.0$,  weil $10^{-16} < \\text{eps}$ – also zu klein ist, um überhaupt eine Änderung in der Darstellung von $1.0$ zu bewirken.\n",
+    "## Warum liefert `sum_forward` ein anderes Ergebnis als `sum_reverse`?\n",
     "\n",
-    "Die Summanden **„verpuffen“** numerisch. Das Resultat bleibt exakt **$1.0$**.\n",
+    "Angenommen:\n",
     "\n",
     "```python\n",
-    "print(1e-16 < np.finfo(float).eps)     # True\n",
-    "print(1.0 + 1e-16 == 1.0)              # True\n",
+    "array = np.array([1.0] + [1e-16] * 100)\n",
+    "```\n",
+    "\n",
+    "- `sum_forward` addiert zuerst `1.0` und dann viele kleine `1e-16`. Diese einzelnen Summanden sind kleiner als `eps` und **gehen verloren**.\n",
+    "- `sum_reverse` addiert zuerst die kleinen `1e-16` zu einem größeren Zwischenwert (z. B. `1e-14`), der dann zu `1.0` addiert wird und sich **merklich auswirkt**.\n",
+    "- `sum_numpy` verwendet oft optimierte oder paarweise Additionen (`pairwise summation`), was ebenfalls zu einem etwas besseren Ergebnis führen kann.\n",
+    "\n",
+    "Gleitkommazahlen sind **nicht assoziativ**, d. h.:\n",
+    "\n",
+    "```\n",
+    "(a + b) + c ≠ a + (b + c)\n",
     "```\n",
     "\n",
     "---\n",
     "\n",
-    "Der **Bias** ist die Exponentenverschiebung, die verwendet wird, um den Exponenten nicht als vorzeichenbehaftete Zahl zu speichern.  \n",
-    "Exponenten können so als positive Zahlen **ohne Vorzeichenbit** abgelegt werden – das vereinfacht die Verarbeitung durch die Hardware.  \n",
-    "Anstatt z. B. den echten Exponenten $-5$ zu speichern, speichert man stattdessen $-5 + \\text{Bias}$.\n",
+    "## Analyse von `1e-17` in IEEE 754\n",
     "\n",
-    "---\n",
-    "\n",
-    "Mit $11$ Bits für den Exponenten können Zahlen von $0$ bis $2^{11} - 1 = 2047$ dargestellt werden.  \n",
-    "Der Bias für **np.float64** beträgt:  \n",
-    "$\\text{Bias} = 2^{11 - 1} - 1 = 1023$  \n",
-    "Das entspricht der Mitte des 11-Bit-Bereichs.  \n",
-    "\n",
-    "---\n",
-    "\n",
-    "Die Werte $0$ und $2047$ sind reserviert für Sonderfälle (z. B. Null, Inf, NaN).  \n",
-    "So entsteht eine **einheitliche Rechenlogik**, z. B. auch für die Addition.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Beispiel:**  \n",
-    "Mathematisch gilt: $1.0 = 1.0 \\cdot 2^0$ → echter Exponent $= 0$  \n",
-    "In IEEE 754 wird gespeichert: $e = 0 + \\text{Bias} = 1023_{10} = 01111111111_2$\n",
-    "\n",
-    "Die **Mantisse** speichert nur die **Nachkommastellen**,  \n",
-    "die **Vorkommastelle $1$ ist implizit**.  \n",
-    "Die Mantisse ist 52 Bit lang → im Fall von $1.0$: alle Bits gleich 0.\n",
-    "\n",
-    "**Darstellung in IEEE 754 (64 Bit) für 1.0:**\n",
-    "\n",
-    "\n",
-    "$1.0_{10} = 0 01111111111 000...000$\n",
-    "\n",
-    "Oder mathematisch:\n",
-    "\n",
-    "$1.0 = (-1)^s · 1.m · 2^{e - 1023}$\n",
-    "\n",
-    "mit:  \n",
-    "- $s = 0$ (positiv)  \n",
-    "- $m = 0...0$  \n",
-    "- $e = 1023$\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Genauso kann z. B. $1e{-17}$ als  \n",
-    "$$1e{-17} = (-1)^s \\cdot 1.m \\cdot 2^{e - 1023}$$  \n",
-    "dargestellt werden.  \n",
-    "Dabei ist $s = 0$.  \n",
-    "Für die Berechnung von Exponent und Mantisse benötigt man die **Binärdarstellung von $1e{-17}$** – die lässt sich mit Python oder NumPy bestimmen.\n",
+    "Um zu verstehen, warum `1e-17` bei der Addition zu `1.0` verloren geht, analysieren wir seine Binärdarstellung:\n",
     "\n",
     "```python\n",
-    "np.frexp(1e-17) \n",
-    "# (np.float64(0.7205759403792794), np.int32(-56)). \n",
-    "# Das bedeuetet 1e-17 = 0.7205759403792794 * 2^(-56). \n",
-    "# https://numpy.org/doc/2.2/reference/generated/numpy.frexp.html\n",
+    "np.frexp(1e-17)\n",
+    "# Ergebnis: (0.7205759403792794, -56)\n",
     "```\n",
     "\n",
-    "Um die normalisierte Darstellung zu erhalten wird die Mantisse $0,7205759403792794$ mit $2$ multipliziert und die Basis mit dem Exponenten $2^{-56}$ durch $2$ dividiert. Dadurch ändert sich nichts am Zahlenwert. Somit ist $0.7205759403792794 \\cdot 2^{-56}$ = $1,4411518807585588 \\cdot 2^{-57}$.\n",
+    "Das bedeutet:\n",
     "\n",
-    "Alternativ zur Benutzung von `frexp` kann man die Gleichung\n",
+    "```\n",
+    "1e-17 = 0.72057594... * 2^(-56)\n",
+    "```\n",
     "\n",
-    "$$1e{-17} = x \\cdot 2^n$$\n",
+    "Multipliziert man Mantisse und verschiebt den Exponenten:\n",
     "\n",
-    "mit $1 \\leq x < 2$ wie folgt lösen:\n",
+    "```\n",
+    "= 1.4411518807585588 · 2^(-57)\n",
+    "```\n",
     "\n",
-    "$$\\log_2(1e{-17}) = \\frac{\\log_2(1e{-17})}{\\log_{10}(2)} \\approx -56,45$$\n",
+    "Zur Darstellung in IEEE 754:\n",
     "\n",
-    "Es folgt:\n",
+    "- Exponent: `-57 + 1023 = 966` → Binär: `01111000110`\n",
+    "- Mantisse: führende `1.` ist implizit, gespeichert wird nur der Nachkommateil\n",
     "\n",
-    "$$n = -57$$\n",
+    "Die ersten Schritte zur Berechnung der Mantissenbits:\n",
     "\n",
-    "Danach kann die Gleichung\n",
+    "```\n",
+    "0.44115188 * 2 = 0.88230376   → 0  \n",
+    "0.88230376 * 2 = 1.76460752   → 1  \n",
+    "0.76460752 * 2 = 1.52921504   → 1  \n",
+    "...\n",
+    "```\n",
     "\n",
-    "$$1e{-17} = x \\cdot 2^{-57}$$\n",
-    "\n",
-    "nach $x$ aufgelöst werden. Daraus folgt:\n",
-    "\n",
-    "$$x = 2^{57} \\cdot 1e{-17} = 1,44115188075855872$$\n",
-    "\n",
-    "Also gilt:\n",
-    "\n",
-    "$$1e{-17} = 1,44115188075855872 \\cdot 2^{-57}$$\n",
-    "\n",
-    "---\n",
-    "\n",
-    "In IEEE 754 wird der Exponent als $-57 + 1023 = 966$ gespeichert, wobei:\n",
-    "\n",
-    "$$966_{10} = 01111000110_2$$\n",
-    "\n",
-    "Der Exponent wird als 11-Bit-Binärzahl gespeichert.\n",
+    "Diese 0/1-Folge wird als Bitfolge gespeichert.\n",
     "\n",
     "---\n",
     "\n",
-    "Nun zur Mantisse:  \n",
-    "IEEE speichert die Mantisse $0,44115188075855872$ ohne das führende $1$.  \n",
-    "Die Zahl wird iterativ mit 2 multipliziert, und das Ergebnis der 52 Multiplikationen wird von oben nach unten notiert, um die Mantisse zu berechnen.\n",
+    "## Bias im Exponenten\n",
     "\n",
-    "Die ersten Schritte der Berechnung sind:\n",
+    "- Der Exponent wird **nicht negativ** gespeichert, sondern mit einem **Bias**.\n",
+    "- Für `float64` gilt:  \n",
+    "  ```\n",
+    "  Bias = 2^(11 - 1) - 1 = 1023\n",
+    "  ```\n",
+    "- Gültiger Exponentenbereich: `1` bis `2046` (Werte `0` und `2047` sind reserviert für Sonderfälle wie 0, Inf, NaN)\n",
     "\n",
-    "$$0,44115188075855872 \\cdot 2 = 0,88230376151711744 \\quad \\rightarrow \\quad 0$$\n",
+    "Beispiel:\n",
     "\n",
-    "$$0,88230376151711744 \\cdot 2 = 1,76460752303423488 \\quad \\rightarrow \\quad 1$$\n",
+    "- Mathematisch:  \n",
+    "  ```\n",
+    "  1.0 = 1.0 · 2^0 → Exponent = 0\n",
+    "  ```\n",
+    "- IEEE 754:  \n",
+    "  ```\n",
+    "  gespeicherter Exponent = 0 + 1023 = 1023 → Binär: 01111111111\n",
+    "  Mantisse = 0…0 (weil 1.0 keine Nachkommastellen hat)\n",
+    "  ```\n",
     "\n",
-    "$$0,76460752303423488 \\cdot 2 = 1,52921504606846976 \\quad \\rightarrow \\quad 1$$\n",
+    "Darstellung in 64 Bit:\n",
     "\n",
-    "</span> "
+    "```\n",
+    "1.0 = 0 01111111111 000...000\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Ab wann ist eine Summe nicht mehr darstellbar?\n",
+    "\n",
+    "Eine einfache Faustregel:\n",
+    "\n",
+    "> Zwei Zahlen `x` und `y` können exakt addiert werden, wenn  \n",
+    "> `| log2(x) - log2(y) | < 52` (bei `float64`)\n",
+    "\n",
+    "Test in Python:\n",
+    "\n",
+    "```python\n",
+    "def mindest_mantissenbits(x, y):\n",
+    "    return abs(np.log2(x) - np.log2(y))\n",
+    "\n",
+    "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Beispiel mit float128\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "\n",
+    "x = 1\n",
+    "y = np.float128(1e-16)\n",
+    "print(x + y, np.float64(x + y))\n",
+    "# Ausgabe: (1.0000000000000001, 1.0)\n",
+    "\n",
+    "x = 1\n",
+    "y = np.float128(1e-16 * 100)\n",
+    "print(x + y, np.float64(x + y))\n",
+    "# Ausgabe: (1.00000000000001, 1.00000000000001)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Fazit\n",
+    "\n",
+    "- Die Summen unterscheiden sich aufgrund der **Rundungsfehler** bei Gleitkommazahlen.\n",
+    "- Die **Reihenfolge der Addition beeinflusst das Ergebnis**, insbesondere wenn Zahlen mit stark unterschiedlichem Betrag summiert werden.\n",
+    "- **IEEE 754** und die **Maschinengenauigkeit** setzen der Genauigkeit enge Grenzen.\n",
+    "- Für numerisch stabile Berechnungen (z. B. große Summen, Mittelwerte) sind spezialisierte Algorithmen wie **Kahan Summation** oder **pairwise summation** zu bevorzugen.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
