--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "## Maschinengenauigkeit\n",
     "\n",
-    "Die kleinste Zahl, die zu `1.0` addiert werden kann, sodass sich das Ergebnis **numerisch unterscheidet**, nennt man **Maschinengenauigkeit** oder **machine epsilon**:\n",
+    "Die kleinste Zahl, die zu `1.0` addiert werden kann, sodass sich das Ergebnis **numerisch unterscheidet**, nennt man **Maschinengenauigkeit** oder **machine epsilon** $\\varepsilon_{\\text{mach}}$:\n",
     "\n",
     "```python\n",
     "np.finfo(float).eps\n",
@@ -195,74 +195,94 @@
     "```\n",
     "(a + b) + c ≠ a + (b + c)\n",
     "```\n",
+    "---\n",
+    "\n",
+    "### Darstellung der Zahl `1.0` im IEEE 754-Standard\n",
+    "\n",
+    "#### Mathematische Form:\n",
+    "\n",
+    "$\n",
+    "1.0 = 1.0 \\cdot 2^0 \\\\\n",
+    "\\Rightarrow \\text{Echter Exponent} = 0 \\\\\n",
+    "\\Rightarrow \\text{Gespeicherter Exponent} = 0 + \\text{Bias} = 1023 = 01111111111_2\n",
+    "$\n",
+    "\n",
+    "#### Mantisse:\n",
+    "- Die Zahl `1.0` entspricht im Binärsystem: $ 1.000\\ldots0_2 $\n",
+    "- Die **führende 1 vor dem Komma** wird im IEEE 754-Format **nicht gespeichert** (implizit angenommen)\n",
+    "- Alle 52 Bits der Mantisse (also der Nachkommastellen) sind daher **0**\n",
+    "\n",
+    "#### IEEE 754-Darstellung (64 Bit – `double precision`):\n",
+    "\n",
+    "```\n",
+    "s        e (11 Bit)             m (52 Bit)\n",
+    "0   01111111111   0000000000000000000000000000000000000000000000000000\n",
+    "```\n",
+    "\n",
+    "#### Zusammenfassung:\n",
+    "- **Vorzeichenbit (`s`)**: `0` → Zahl ist positiv  \n",
+    "- **Exponent (`e`)**: 1023 → gespeichert als `01111111111`  \n",
+    "- **Mantisse (`m`)**: nur Nullen (weil keine Nachkommastellen vorhanden sind)  \n",
+    "- Daraus ergibt sich der dargestellte Wert:\n",
+    "  \n",
+    "$\n",
+    "(-1)^0 \\cdot 1.0 \\cdot 2^{0} = 1.0\n",
+    "$\n",
     "\n",
     "---\n",
     "\n",
-    "## Analyse von `1e-17` in IEEE 754\n",
+    "### Darstellung der Zahl `1e-17` im IEEE 754-Standard\n",
     "\n",
-    "Um zu verstehen, warum `1e-17` bei der Addition zu `1.0` verloren geht, analysieren wir seine Binärdarstellung:\n",
+    "### Mathematische Zerlegung von `1e-17`\n",
     "\n",
-    "```python\n",
-    "np.frexp(1e-17)\n",
-    "# Ergebnis: (0.7205759403792794, -56)\n",
+    "Wir suchen $m$ und $e$, sodass:\n",
+    "\n",
+    "$\n",
+    "1e-17 = 1.m \\cdot 2^{e - 1023}\n",
+    "$\n",
+    "\n",
+    "Um das umzuformen:\n",
+    "\n",
+    "1. Schreibe `1e-17` als Zweierpotenz:\n",
+    "   $\n",
+    "   1e-17 = 10^{-17} \\approx 2^{-56.14}\n",
+    "   $\n",
+    "\n",
+    "2. Runde auf:\n",
+    "   $\n",
+    "   1e-17 \\approx 2^{-56}\n",
+    "   $\n",
+    "\n",
+    "3. Daraus folgt:\n",
+    "   $\n",
+    "   1e-17 = 1.0 \\cdot 2^{-56}\n",
+    "   \\Rightarrow e_{\\text{effektiv}} = -56\n",
+    "   \\Rightarrow \\text{gespeicherter Exponent} = -56 + 1023 = 967\n",
+    "   $\n",
+    "\n",
+    "- **Vorzeichenbit ($s$)**: `0` (positiv)  \n",
+    "- **Exponent ($e$)**: $967$ → binär: `01111001111`  \n",
+    "- **Mantisse ($m$)**: Nachkommabits von `1.0` (also alles Nullen)  \n",
+    "\n",
+    "Die IEEE-754-Bitfolge sieht dann so aus (in 64 Bit):\n",
+    "```\n",
+    "s        e (11 Bit)             m (52 Bit)\n",
+    "0   01111001111   0000000000000000000000000000000000000000000000000000\n",
     "```\n",
     "\n",
-    "Das bedeutet:\n",
+    "`1e-17` ist **kleiner** als der kleinste darstellbare Unterschied zu `1.0` im IEEE 754-Standard (double precision), nämlich:\n",
     "\n",
-    "```\n",
-    "1e-17 = 0.72057594... * 2^(-56)\n",
-    "```\n",
-    "\n",
-    "Multipliziert man Mantisse und verschiebt den Exponenten:\n",
-    "\n",
-    "```\n",
-    "= 1.4411518807585588 · 2^(-57)\n",
-    "```\n",
-    "\n",
-    "Zur Darstellung in IEEE 754:\n",
-    "\n",
-    "- Exponent: `-57 + 1023 = 966` → Binär: `01111000110`\n",
-    "- Mantisse: führende `1.` ist implizit, gespeichert wird nur der Nachkommateil\n",
-    "\n",
-    "Die ersten Schritte zur Berechnung der Mantissenbits:\n",
-    "\n",
-    "```\n",
-    "0.44115188 * 2 = 0.88230376   → 0  \n",
-    "0.88230376 * 2 = 1.76460752   → 1  \n",
-    "0.76460752 * 2 = 1.52921504   → 1  \n",
-    "...\n",
-    "```\n",
-    "\n",
-    "Diese 0/1-Folge wird als Bitfolge gespeichert.\n",
+    "$\n",
+    "\\varepsilon_{\\text{mach}} \\approx 2^{-52} \\approx 2.22 \\cdot 10^{-16}\n",
+    "$\n",
     "\n",
     "---\n",
     "\n",
-    "## Bias im Exponenten\n",
+    "### Fazit:\n",
     "\n",
-    "- Der Exponent wird **nicht negativ** gespeichert, sondern mit einem **Bias**.\n",
-    "- Für `float64` gilt:  \n",
-    "  ```\n",
-    "  Bias = 2^(11 - 1) - 1 = 1023\n",
-    "  ```\n",
-    "- Gültiger Exponentenbereich: `1` bis `2046` (Werte `0` und `2047` sind reserviert für Sonderfälle wie 0, Inf, NaN)\n",
-    "\n",
-    "Beispiel:\n",
-    "\n",
-    "- Mathematisch:  \n",
-    "  ```\n",
-    "  1.0 = 1.0 · 2^0 → Exponent = 0\n",
-    "  ```\n",
-    "- IEEE 754:  \n",
-    "  ```\n",
-    "  gespeicherter Exponent = 0 + 1023 = 1023 → Binär: 01111111111\n",
-    "  Mantisse = 0…0 (weil 1.0 keine Nachkommastellen hat)\n",
-    "  ```\n",
-    "\n",
-    "Darstellung in 64 Bit:\n",
-    "\n",
-    "```\n",
-    "1.0 = 0 01111111111 000...000\n",
-    "```\n",
+    "- Die Zahl `1.0` wird exakt dargestellt  \n",
+    "- Die Zahl `1e-17` ist **zu klein**, um bei Addition zu `1.0` noch Einfluss zu haben  \n",
+    "- Ursache: **Begrenzte Mantissenlänge** → kleinere Unterschiede als $ 2^{-52} $ sind nicht darstellbar → **numerische Ungenauigkeiten**\n",
     "\n",
     "---\n",
     "\n",
@@ -281,34 +301,6 @@
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
     "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Beispiel mit float128\n",
-    "\n",
-    "```python\n",
-    "import numpy as np\n",
-    "\n",
-    "x = 1\n",
-    "y = np.float128(1e-16)\n",
-    "print(x + y, np.float64(x + y))\n",
-    "# Ausgabe: (1.0000000000000001, 1.0)\n",
-    "\n",
-    "x = 1\n",
-    "y = np.float128(1e-16 * 100)\n",
-    "print(x + y, np.float64(x + y))\n",
-    "# Ausgabe: (1.00000000000001, 1.00000000000001)\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Fazit\n",
-    "\n",
-    "- Die Summen unterscheiden sich aufgrund der **Rundungsfehler** bei Gleitkommazahlen.\n",
-    "- Die **Reihenfolge der Addition beeinflusst das Ergebnis**, insbesondere wenn Zahlen mit stark unterschiedlichem Betrag summiert werden.\n",
-    "- **IEEE 754** und die **Maschinengenauigkeit** setzen der Genauigkeit enge Grenzen.\n",
-    "- Für numerisch stabile Berechnungen (z. B. große Summen, Mittelwerte) sind spezialisierte Algorithmen wie **Kahan Summation** oder **pairwise summation** zu bevorzugen.\n",
-    "\n",
     "</span>"
    ]
   },
@@ -409,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f5619384-8fab-4a57-8f30-73de2922dd89",
    "metadata": {
     "nbgrader": {
