Textbearbeitungen und inhaltliche Korrekturen bei der ersten Aufgabe

--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -195,9 +195,12 @@
     "```\n",
     "(a + b) + c ≠ a + (b + c)\n",
     "```\n",
+    "\n",
+    "Das bedeutet, dass die Reihenfolge der Addition das Ergebnis beeinflussen kann, besonders wenn sehr kleine Zahlen in der Summe enthalten sind.\n",
+    "\n",
     "---\n",
     "\n",
-    "### Darstellung der Zahl `1.0` im IEEE 754-Standard\n",
+    "## Darstellung der Zahl `1.0` im IEEE 754-Standard\n",
     "\n",
     "#### Mathematische Form:\n",
     "\n",
@@ -231,7 +234,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Darstellung der Zahl `1e-17` im IEEE 754-Standard\n",
+    "## Darstellung der Zahl `1e-17` im IEEE 754-Standard\n",
     "\n",
     "### Mathematische Zerlegung von `1e-17`\n",
     "\n",
@@ -280,9 +283,9 @@
     "\n",
     "### Fazit:\n",
     "\n",
-    "- Die Zahl `1.0` wird exakt dargestellt  \n",
-    "- Die Zahl `1e-17` ist **zu klein**, um bei Addition zu `1.0` noch Einfluss zu haben  \n",
-    "- Ursache: **Begrenzte Mantissenlänge** → kleinere Unterschiede als $ 2^{-52} $ sind nicht darstellbar → **numerische Ungenauigkeiten**\n",
+    "- Die Zahl `1.0` kann exakt im Format IEE 754 `float64` dargestellt werden.  \n",
+    "- Die Zahl `1e-17` ist **zu klein** und hat eine **unendliche Binärdarstellung**, was zu einer _Rundung_ führen muss. Eine präzise Darstellung innerhalb der 52 Bits der Mantisse ist nicht möglich. \n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -328,15 +331,17 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
-    "<h2>Kaskadensummation</h2>\n",
+    "## Kaskadensummation\n",
     "\n",
-    "NumPy verwendet ein numerisch besseres Verfahren (partielle paarweise Summation), das in vielen Anwendungsfällen zu einer höheren Genauigkeit führt. In der numerischen Mathematik bezeichnet paarweise Summation – auch Kaskadensummation genannt – ein Verfahren zum Addieren von Gleitkommazahlen, das Rundungsfehler im Vergleich zur sequentiellen Summation deutlich reduziert.\n",
+    "Paarweise Summation (auch Kaskadensummation genannt) ist ein numerisch besseres Verfahren, bei dem die Werte in mehreren Schritten summiert werden. Dies bedeutet, dass Werte mit ähnlichen Größen zuerst zusammengefasst werden. Dadurch wird der Fehler reduziert, der entstehen kann, wenn immer kleinere Zahlen zu einem sehr großen Wert hinzugefügt werden (wie es bei der sequentiellen Summation der Fall wäre).\n",
     "\n",
-    "https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
+    "### Verfahren von `np.sum()`\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Pairwise_summation\n",
+    "NumPy verwendet für die Addition von Arrays ein Verfahren namens **Kaskadensummation** oder **paarweise Summation**. Dieses Verfahren reduziert Rundungsfehler im Vergleich zur sequentiellen Summation und führt in vielen Fällen zu einer höheren Genauigkeit. `np.sum()` kann interne Optimierungen verwenden, wie z. B. parallelisierte Summation, abhängig von der Größe des Arrays und der Hardware. In modernen Implementierungen von NumPy wird oft die `np.add.reduce()` Funktion verwendet, um die Summation durchzuführen, die im Hintergrund mit dem `ufunc`-Mechanismus arbeitet. Diese `reduce`-Methode summiert die Werte sequenziell, aber auch sie optimiert den Prozess, indem sie die Reihenfolge der Summanden variiert oder bei Bedarf parallelisiert.\n",
     "\n",
-    "</span>"
+    "\n",
+    "Mehr Informationen zu dieser Technik gibt es auf [Wikipedia](https://en.wikipedia.org/wiki/Pairwise_summation) und in der [NumPy-Dokumentation](https://numpy.org/doc/stable/reference/generated/numpy.sum.html).\n",
+    "\n"
    ]
   },
   {
