Einen kleinen Satz ergänzt

--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -169,7 +169,7 @@
     "# Ergebnis: 2.220446049250313e-16\n",
     "```\n",
     "\n",
-    "Zahlen kleiner als `eps` „verpuffen“ bei der Addition zu größeren Zahlen wie `1.0`, da sie außerhalb der darstellbaren Genauigkeit der Mantisse liegen:\n",
+    "Zahlen kleiner als `eps` „verpuffen“ bei der Addition zu größeren Zahlen wie `1.0`, da sie außerhalb der darstellbaren Genauigkeit der Mantisse liegen. Wenn zwei Gleitkommazahlen stark unterschiedlich groß sind, kann die kleinere Zahl beim Addieren „verschluckt“ werden – das nennt man Verlust der Signifikanz:\n",
     "\n",
     "```python\n",
     "print(1e-16 < np.finfo(float).eps)  # True\n",
