--- a/EA1_Toni.ipynb
+++ b/EA1_Toni.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "11b6c189-e0ee-411a-8f83-b804db3527d8",
    "metadata": {
     "tags": []
@@ -79,9 +79,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum_numpy=  1.0000000000000084\n",
-      "sum_forward=1.0\n",
-      "sum_reverse=1.00000000000001\n"
+      "sum_numpy=  np.float64(1.0000000000000084)\n",
+      "sum_forward=np.float64(1.0)\n",
+      "sum_reverse=np.float64(1.00000000000001)\n"
      ]
     }
    ],
@@ -1359,7 +1359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1373,7 +1373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.1"
   },
   "otter": {
    "OK_FORMAT": true,
