Kleine Textverbesserung bei der Aufgabe "Grenzwerte von Funktionen"

--- a/EA1_final.ipynb
+++ b/EA1_final.ipynb
@@ -304,7 +304,6 @@
     "\n",
     "mindest_mantissenbits(1, 1e-16) < 52  # False → nicht exakt addierbar\n",
     "```\n",
-     
     "</span>"
    ]
   },
@@ -401,7 +400,8 @@
     "\n",
     "\n",
     "<span style=\"color:blue\">\n",
-    "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. Der Grenzwert der Funktion für x → 0 ist 1.\n",
+    "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. Der Grenzwert der Funktion für x → 0 ist 1. Dabei sollen mögliche numerische Probleme bei sehr kleinen x beobachtet werden.\n",
+    "\n",
     "</span>\n"
    ]
   },
@@ -451,9 +451,9 @@
     "def f(x):\n",
     "        return (np.exp(x) - 1) / x\n",
     "\n",
+    "# Bereich 1: x = 10^(-1) bis 10^(-15)\n",
     "# Erzeuge die Werte x = 10^(-1), 10^(-2), ..., 10^(-15)\n",
     "input_numbers = np.array([10**(-i) for i in range(1, 16)])\n",
-    "\n",
     "result_limits = f(input_numbers)\n",
     "\n",
     "#Ausgabe\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "57fcfa50-0942-4861-be87-914dea652464",
    "metadata": {
     "editable": true,
@@ -495,6 +495,7 @@
     }
    ],
    "source": [
+    "# Bereich 2: x = 10^(-16) bis 10^(-20)\n",
     "input_numbers_2 = np.array([10**(-i) for i in range(16, 21)])\n",
     "result_limits_2 = f(input_numbers_2)\n",
     "\n",
@@ -538,14 +539,18 @@
     "x = 1e-17, f(x) = 0.0  \n",
     "x = 1e-18, f(x) = 0.0  \n",
     "x = 1e-19, f(x) = 0.0  \n",
-    "x = 1e-20, f(x) = 0.0  \n",
+    "x = 1e-20, f(x) = 0.0 \n",
+    "\n",
+    "### Ergebnisbeobachtung\n",
+    "\n",
+    "Ab etwa $x \\approx 10^{-16}$ treten numerische Rundungsfehler sichtbar auf, abhängig von der Maschinengenauigkeit (`float64`).\n",
     "\n",
     "<h3> Erklärung: Rundungsfehler </h3>\n",
     "\n",
     "Für sehr kleine `x` gilt näherungsweise:  \n",
     "`exp(x) ≈ 1 + x`\n",
     "\n",
-    "Wenn `x` so klein wird, dass `e^x` und `1` auf dem Computer **nicht mehr unterscheidbar** sind, wird der Ausdruck `e^x - 1` numerisch zu **null**.\n",
+    "Wenn `x` so klein wird, dass `e^x` und `1` auf dem Computer **nicht mehr unterscheidbar** sind, wird der Ausdruck `e^x - 1` **numerisch ungenau** (_null_), da beide Terme sehr nah beieinander liegen → Verlust signifikanter Stellen.\n",
     "\n",
     "> Beispiel:  \n",
     "> `x = 1e-17` → `exp(x) ≈ 1.00000000000000001`  \n",
